--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,8 @@
-PORT = 5000
-NODE_ENV = DEVELOPMENT
-
+NODE_ENV = PRODUCTION
 FRONTEND_URL = http://localhost:5173
 
 
+# DB_URI = "mongodb+srv://animeshjha3:_j0w33llc2k24@brick-droid-cluster.26z7w.mongodb.net/"
 DB_URI = "mongodb+srv://markstoreywrc:B0SSm4rk2k24@cluster-world-of-minifi.dynyp.mongodb.net/"
 
 JWT_SECRET = MARKBRICKDROIDWEBAPP
@@ -12,8 +11,8 @@ COOKIE_EXPIRES_TIME = 7
 
 SMTP_HOST = 'sandbox.smtp.mailtrap.io'
 SMTP_PORT = 2525
-SMTP_EMAIL = 4595ea2e683223
-SMTP_PASSWORD = fe874c8605f98a
+SMTP_EMAIL = 0e17548fb0747f
+SMTP_PASSWORD = 52b98c38ff0e3b
 SMTP_FROM_EMAIL = noreply@brickdroids.com
 SMTP_FROM_NAME = BrickDroids
 
