--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,5 +1,5 @@
 PORT = 5000
-NODE_ENV = DEVELOPMENT
+NODE_ENV = PRODUCTION
 
 FRONTEND_URL = http://localhost:5173
 
@@ -14,8 +14,8 @@ SMTP_HOST = 'sandbox.smtp.mailtrap.io'
 SMTP_PORT = 2525
 SMTP_EMAIL = 4595ea2e683223
 SMTP_PASSWORD = fe874c8605f98a
-SMTP_FROM_EMAIL = noreply@brickdroids.com
-SMTP_FROM_NAME = BrickDroids
+SMTP_FROM_EMAIL = noreply@worldofminifigs.com
+SMTP_FROM_NAME = World-of-minifigs
 
 CLOUDINARY_CLOUD_NAME=drlh1fwbk
 CLOUDINARY_API_KEY=788616196944462
